// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticatedApp render gamelist 1`] = `
<div>
  <div>
    JackboxGameList
  </div>
</div>
`;

exports[`AuthenticatedApp render page 1`] = `
<div>
  <div />
</div>
`;
